added game media

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- Microdata markup added by Google Structured Data Markup Helper. -->
 	<meta charset="utf-8"/>
+	<meta name="google-site-verification" content="CJonXWT6qdj3UEKPJhp3WFuHkDmyIOFtA5ARu1b80cM" />
+	<meta name="msvalidate.01" content="8D71A1D6BF234B29D9C3AB5CCCABE40F" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-	<title>John Shelby - Minimal Personal Portfolio Theme</title>
+	<title>EmojiFlower VR</title>
+	<meta name="description" content="EmojiFlower VR: An Emoji Game for Virtual Reality. Click here to download it in the App Store.">
+  <meta name="author" content="Emoji Foundation">
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/style.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -16,12 +21,14 @@
 	</style>
 	<!-- jQuery -->
 	<script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+	<script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="images/favicon.png">
 </head>
 <body class="fade-in cmon body">
 
 	<!-- HEADER /////////////////////////////////////////////////////////////////////////// -->
+	<span itemscope itemtype="http://schema.org/SoftwareApplication">
 	<header id="welcome" class="parent module parallax parallax-1">
 		<div class="burger" id="toggle">
 			<span class="top"></span>
@@ -49,9 +56,10 @@
 		<div class="fade child">
 			<div class="container_small">
 				<!-- Header Titles -->
-					<img src="images/logo.png">
+					<img itemprop="image" alt="EmojiFlower VR logo"src="images/logo.png">
 				<!-- <h1 class="header_title">EmojiFLower VR </h1> -->
 				<h2 class="header_title">An Emoji Game in Virtual Reality</h2>
+
 			</div>
 		</div>
 	</header>
@@ -60,18 +68,26 @@
 	<!-- ABOUT SECTION /////////////////////////////////////////////////////////////////////////// -->
 	<section id="about" class="module">
 		<div class="container_small">
-			<h2 class="section_title">Have you ever wanted to live in a musical wonderland of Emoji?</h2>
-			<p>
-EmojiFlower VR, a virtual reality game combining the magic of Emoji with stunning natural and 90’s-inspired visuals, and original music. Experience Emoji VR with Google Cardboard.
+			<h1 class="section_title">Have you ever wanted to live in a musical wonderland of Emoji?</h1>
+			<p><span itemprop="name">
+EmojiFlower VR</span>, a virtual reality game combining the magic of Emoji with stunning natural and 90’s-inspired visuals, and original music. Experience Emoji VR with <a href="https://store.google.com/product/google_cardboard?utm_source=google-cardboard&utm_medium=MS&utm_campaign=Google_Cardboard">Google Cardboard</a>.
 </p><p><br>
 Collect Emoji as you explore flower, outer space, and underwater worlds, inspired by the days of Super Mario Bros! Point and click to grab Emojis and gain points as you travel through time and space in 360 degree hyper reality!
 </p><p><br>
-EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement building in American culture towards the turn of the 21st century. The game was designed and developed by Niki Selken, with original music by Timothy Vickers
+EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement building in American culture towards the turn of the 21st century.
+</p><p><br>
+	EmojiFlower VR is the latest project of the <a target="_blank" href="https://emojifoundation.com">Emoji Foundation</a>. It was designed and developed by <a target="_blank"  href="https://nikiselken.com"><span itemprop="author" itemscope itemtype="http://schema.org/Person">
+<span itemprop="name">Niki Selken</span></span></a>, with original music by Timothy Vickers.
 </p>
+<div class = "app">
+<img  src="images/app.png">
+</div>
+
 </div>
 	</section>
 	<!-- END ABOUT SECTION /////////////////////////////////////////////////////////////////////////// -->
-	<div class="parallax-window" id="divider"  data-parallax="scroll" data-image-src="../images/screen2.jpg>
+	<div  id="divider">
+		<img style="padding-top:40%" alt"Google Cardboard" src="images/vr-cardboard.png">
 			<!-- <img id="divider" src="images/screen2.jpg"> -->
 </div>
 <section id="reviews" class="module">
@@ -87,7 +103,7 @@ EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement 
 		“It was so cool!”
 		</li><ul>
 			-Oliver Cusik, 9 years old
-	</li><ul>
+	</li><ul><br>
 	“I think it’s really good. I liked popping Emojis.”
 	</li><ul>
 		-Myla Peacock, 8 years old
@@ -100,7 +116,7 @@ EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement 
 
 	<section id="portfolio" class="module">
 		<div class="container_small">
-			<h2 class="section_title">Press</h2>
+			<h2 class="header_title">Press</h2>
 
 			<div id="wrap">
 				<!-- Work 01 -->
@@ -110,8 +126,9 @@ EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement 
 <li><a href="https://bayareabandwidth.net/first-ever-emojicon-merges-silly-symbols-with-academia-3bc1766f152c#.ezhsdtkmv" target="_blank" rel="noopener noreferrer">Bay Area Bandwidth</a></li>
 <li><a href="https://medium.com/@GrayAreaorg/announcing-gray-areas-fall-2016-cohort-4d8269c0c28d?mc_cid=d02625edfd&amp;mc_cid=d02625edfd&amp;mc_eid=%5BUNIQID%5D&amp;mc_eid=984c158117#.yacf508xs" target="_blank" rel="noopener noreferrer">Medium</a></li>
 <li><a href="https://medium.com/@GrayAreaorg/niki-selken-cave-painting-pictograms-to-ideographic-vr-531da05b074c" target="_blank" rel="noopener noreferrer">Niki Selken: Cave Painting Pictograms to Ideographic VR</a></li>
-</ul>
-	<h2 class="section_title">Exhibitions</h2>
+</ul><br>
+
+	<h2 class="header_title">Exhibitions</h2>
 <ul>
 <li><a href="http://www.nikiselken.com/s/tilt.png" target="_blank" rel="noopener noreferrer">Google Tilt Brush VR Happy Hour, 2017</a>, San Francisco</li>
 <li><a href="http://grayarea.org/event/fall-cultural-incubator-showcase/" target="_blank" rel="noopener noreferrer">Cultural Incubator Showcase at Grey Area</a> &#8211;  2017, San Francisco</li>
@@ -123,37 +140,91 @@ EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement 
 		</div>
 	</section>
 	<!-- END PORTFOLIO SECTION /////////////////////////////////////////////////////////////////////////// -->
+	<!-- Screen SECTION /////////////////////////////////////////////////////////////////////////// -->
+
+
+	<section id="screen" class="module">
+		<div class="container_small">
+
+
+			<div id="wrap">
+				<h2 class="header_title">Game Media</h2>
+		<div class="video-container">
+			<!-- <h3 class="section_title">Watch Gameplay</h3> -->
+      <iframe width="640" height="360" src="https://www.youtube.com/embed/xcuNmoX2XXU?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div><div class="video-container">
+			<iframe width="640" height="360" src="https://www.youtube.com/embed/NjjWfWD_LkI?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div><div class="video-container">
+			<iframe width="640" height="360"
+			 src="https://www.youtube.com/embed/1aXQyRI1uFk?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+		</div>
+
+			<h3 class="section_title">Screenshots</h3>
+			<div class="works">
+				 <!-- Work 01 -->
+
+				 <article>
+					 <a href="images/photo.jpg" data-featherlight="image">
+            <div class="border">
+							 <img src="images/photo.jpg" alt="">
+            </div>
+					 </a>
+				 </article>
+				 <!-- Work 02 -->
+				 <article>
+					 <a href="images/screen2.jpg" data-featherlight="image">
+						 <div class="border">
+							 <img src="images/screen2.jpg" alt="">
+							 <!-- <h3 class="caption">Business Life</h3> -->
+						 </div>
+					 </a>
+				 </article>
+
+					 <a href="images/screen3.jpg" data-featherlight="image">
+						 <div class="border">
+							 <img src="images/screen3.jpg" alt="">
+							 <!-- <h3 class="caption">Business Life</h3> -->
+						 </div>
+					 </a>
+
+			 </div>
+			 <h3 class="section_title">Listen to the Soundtrack</h3>
+		 <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/429016805&amp;color=%2334a08c&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;show_teaser=true&amp;visual=true"></iframe>
+			</div>
+		</div>
+	</section>
+	<!-- END screen SECTION /////////////////////////////////////////////////////////////////////////// -->
 
 	<!-- CONTACT SECTION /////////////////////////////////////////////////////////////////////////// -->
 	<section id="contact" class="module">
 		<div class="container_small">
-			<h2 class="section_title">Download EmojiFlower VR 😃🌻 Today on the iOS Store</h2>
-			<h3 class="section_subtitle"></h3>
+			<h2 class="section_title">Buy a
+				<a id="cardboard" color="#c17bf1" href="https://store.google.com/product/google_cardboard?utm_source=google-cardboard&utm_medium=MS&utm_campaign=Google_Cardboard">Google Cardboard for $15</a></h2>
+			<h2 class="section_title">Download EmojiFlower VR 😃🌻 Today! </h2>
+			<img class="app" src="images/app.png">
+			<!-- <h3 class="section_subtitle"></h3> -->
 			<div class="info">
 
 			</div>
 			<!-- Social icons -->
 			<div class="social">
 				<!-- Dribbble -->
-				<a href="#" target="_blank">
-					<i class="fa fa-dribbble"></i>
-				</a>
-				<!-- Behance -->
-				<a href="#" target="_blank">
-					<i class="fa fa-behance"></i>
-				</a>
+
 				<!-- Facebook -->
-				<a href="#" target="_blank">
+				<a href="https://www.facebook.com/emojifoundation/" target="_blank">
 					<i class="fa fa-facebook"></i>
 				</a>
 				<!-- Twitter -->
-				<a href="#" target="_blank">
+				<a href="https://twitter.com/emojifoundation/" target="_blank">
 					<i class="fa fa-twitter"></i>
 				</a>
-				<!-- Instagram -->
-				<a href="#" target="_blank">
+				<!-- Email -->
+				<a href="mailto:info@emojifoundation.com" target="_blank">
+				<i class="fa fa-envelope" aria-hidden="true"></i>
+			</a>
+				<!-- <a href="#" target="_blank">
 					<i class="fa fa-instagram"></i>
-				</a>
+				</a> -->
 			</div>
 		</div>
 	</section>
@@ -163,7 +234,7 @@ EmojiFlower VR contemplates and celebrates the optimism, oddity, and excitement 
 	<footer>
 		<div class="container_footer">
 			<div class="left">
-				<p>© 2014-2016 <span>Niki Selken</span></p>
+				<p>© 2018 <span>Niki Selken</span></p>
 			</div>
 			<div class="right">
 				<a href="#welcome">Return to Top <i class="fa fa-long-arrow-up"></i></a>
